# Musica

./: .gitignore  README.md  capacitor.config.json  electron-main.cjs  index.html  metadata.json  package-lock.json  package.json  server.ts  vercel.json
android/app/: build.gradle
android/app/src/main/java/com/musica/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py  prompts.py
backend/app/routes/: curate.py
backend/app/services/: ai_router.py  audio_compress.py  gemini_curator.py  grounding.py  model_resolve.py  openai_curator.py  temp_files.py  training_context.py
backend/grounding/: musixmatch_extended_guidelines.txt  musixmatch_web_guidelines.txt
backend/scripts/: generate_extended_pdf.py  test_gemini_upload.py
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/settings/: page.tsx
frontend/components/: AnimatedBackground.tsx  AppHeader.tsx  ConfigPanel.tsx  CurationLiveFeed.tsx  LyricsMarkdown.tsx  LyricsPanel.tsx  MusicPlayerHero.tsx  ResultsViewer.tsx  UploadZone.tsx
frontend/lib/: ai-settings.ts  api.ts  compress-audio.ts  lyrics.ts  pipeline.ts  prompt.ts  settings.ts  ui-batch.ts
src/: App.tsx  index.css
src/components/: AppHeader.tsx  ConfigPanel.tsx  CurationLiveFeed.tsx  LyricsMarkdown.tsx  PromptBox.tsx  UploadZone.tsx
src/lib/: api.ts  compress-audio.ts  lyrics.ts  pipeline.ts  prompt.ts
