[project]
name = "musica-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.12",
  "google-genai>=1.0.0",
  "pypdf>=5.0.0",
]

# Dependency-only app (not a publishable package) — avoids hatchling wheel build on Vercel
[tool.uv]
package = false
